--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@ video{
   text-align: center;
   border-style: none;
   background-color: #fff;
-  color: #fff;
+  color: #000;
   border-radius: 15px;
 }
 .grid-container{
